--- a/source/_posts/幸福简易教学指南.md
+++ b/source/_posts/幸福简易教学指南.md
@@ -38,13 +38,17 @@ tags:
 
 举个例子，比如说我们想要变得强壮，这是一个**目标**，这个时候需要拥有一套能够实现这个目标的严谨**理论**，这套理论围绕实现“变得强壮”这个主题。
 
-然后通过各种方式（**论文、谷歌、知乎、quora、书籍等等**），我们明白了变强壮的机理、状态变化、优缺点和常用方法等，我们的理论日渐完善。这个时候应当有一些方案产生，我们比较它们的优劣，结合自身的资源（经济、身体条件等），选出了一个最适合我们的方案，这就衍生出了**方法**。
+了解理论可以通过各种方式（**论文、谷歌、知乎、quora、书籍等等**），我们明白了变强壮的机理、状态变化、优缺点和常用方法等，我们的理论日渐完善。比如我知道了肌肉增长本质上是肌肉纤维的断裂与生成，知道这个过程需要补充哪些营养，知道肌肉的分布，增肌与减脂的区别，有氧与无氧的区别与各自的作用。
 
-这里的方法不仅仅是“去健身房开练”这么简单的东西，它应当包括计划和阶段性反馈标准等。
+这个时候应当有一些方案产生，我们比较它们的优劣，结合自身的资源（经济、身体条件等），选出了一个最适合我们的方案，这就衍生出了**方法**。
+
+这里的方法不仅仅是“去健身房开练”这么简单的东西，它应当包括计划和阶段性反馈标准等。比如是选择徒手还是健身房，训练的频率如何，不同肌群的训练如何搭配，饮食如何控制，具体到哪个动作如何做，做的时候应该有什么感觉。
 
 到了这一步，事实上我们毫无成绩，是的，因此这个框架有个非常重要的一项准则是——**先动起来**。
 
-接着上面的例子说，假如我们想变强壮，在看过几篇文章后，你就应该已经行动起来了，在动的过程中，你有了疑惑，你去寻找、完善你的理论，通过理论纠正你的方法，改正你的行为。
+接着上面的例子说，假如我们想变强壮，在看过几篇文章后，你就应该已经行动起来了，二话不说健身卡先办了，看的文章里觉得差不多的计划直接去试试。
+
+在动的过程中，你有了疑惑，你去寻找、完善你的理论，通过理论纠正你的方法，改正你的行为。你发现这样的搭配不适合你，
 
 我想到这里已经解决了前两个问题，第三个问题较为少见，因为对于连动都没动的人来说没机会遇到这个问题。解决的方法就在上面那张图上，关键在于**反馈**，即明确自己的目标，提醒自己我是要“变得强壮”。
 
