--- a/source/_posts/幸福简易教学指南.md
+++ b/source/_posts/幸福简易教学指南.md
@@ -6,7 +6,7 @@ tags:
 
 ## 导言
 
-我们都听过那句话，“明白很多道理，却还是过不好这一生”。我看到这句话的第一想法是，对啊，但是为什么？为什么道理都讲得很清楚，而我们也懂，但就是改变不了什么？在看完《哈佛幸福课》后，我终于明确了这个问题的解答。之所以道理会无用，并不一定说明它是错的，而是它可能只是**孤零零的道理**。以前有个学长说，念头未转化为行为时，就只是一个念头而已就好比拿到了个轮子就想骑着上路，当然会摔倒。本文结合《哈佛幸福课》，希望提出一套从**理论**、**实例**和**方法论**上都兼顾的**完整体系**，从根本上提供提高我们的幸福水平的可行条件，帮助我们实现自我、找到真爱以及变得更幸福。（PS：配合《哈佛幸福课》食用风味更佳）
+我们都听过那句话，“明白很多道理，却还是过不好这一生”。我看到这句话的第一想法是，对啊，但是为什么？为什么道理都讲得很清楚，而我们也懂，但就是改变不了什么？在看完《哈佛幸福课》（又名《积极心理学》）后，我终于明确了这个问题的解答。之所以道理会无用，并不一定说明它是错的，而是它可能只是**孤零零的道理**。以前有个学长说，念头未转化为行为时，就只是一个念头而已就好比拿到了个轮子就想骑着上路，当然会摔倒。本文结合《哈佛幸福课》，希望提出一套从**理论**、**实例**和**方法论**上都兼顾的**完整体系**，从根本上提供提高我们的幸福水平的可行条件，帮助我们实现自我、找到真爱以及变得更幸福。（PS：配合《哈佛幸福课》食用风味更佳）
 
 ## 个人经历
 
@@ -16,8 +16,9 @@ tags:
 
 - 一个简单的人生框架
 - 为什么要幸福
-- 基本概念
-- 改变
+- 基本概念与误区
+- 关于改变
+- 幸福方法论
 - 寻求自我
 - 爱情
 - 拒绝完美主义
@@ -38,7 +39,7 @@ tags:
 
 举个例子，比如说我们想要变得强壮，这是一个**目标**，这个时候需要拥有一套能够实现这个目标的严谨**理论**，这套理论围绕实现“变得强壮”这个主题。
 
-了解理论可以通过各种方式（**论文、谷歌、知乎、quora、书籍等等**），我们明白了变强壮的机理、状态变化、优缺点和常用方法等，我们的理论日渐完善。比如我知道了肌肉增长本质上是肌肉纤维的断裂与生成，知道这个过程需要补充哪些营养，知道肌肉的分布，增肌与减脂的区别，有氧与无氧的区别与各自的作用。
+了解理论可以通过各种方式（**论文、谷歌、知乎、quora、书籍等等**），我们明白了变强壮的机理、状态变化、优缺点和常用方法等。比如我知道了肌肉增长本质上是肌肉纤维的断裂与生成，知道这个过程需要补充哪些营养，知道肌肉的分布，增肌与减脂的区别，有氧与无氧的区别与各自的作用。
 
 这个时候应当有一些方案产生，我们比较它们的优劣，结合自身的资源（经济、身体条件等），选出了一个最适合我们的方案，这就衍生出了**方法**。
 
@@ -48,31 +49,147 @@ tags:
 
 接着上面的例子说，假如我们想变强壮，在看过几篇文章后，你就应该已经行动起来了，二话不说健身卡先办了，看的文章里觉得差不多的计划直接去试试。
 
-在动的过程中，你有了疑惑，你去寻找、完善你的理论，通过理论纠正你的方法，改正你的行为。你发现这样的搭配不适合你，
+在动的过程中，你有了疑惑，你去寻找、完善你的理论，通过理论纠正你的方法，改正你的行为。你发现这样的搭配不适合你，你发现这个动作对你来说难度还太大，你发现进步不大原因在于饮食没跟上，你选择更加适合你的饮食习惯。
 
-我想到这里已经解决了前两个问题，第三个问题较为少见，因为对于连动都没动的人来说没机会遇到这个问题。解决的方法就在上面那张图上，关键在于**反馈**，即明确自己的目标，提醒自己我是要“变得强壮”。
+我想到这里前两个问题的解决方法已经有了眉目了，第三个问题较为少见，因为对于连动都没动的人来说没机会遇到这个问题。解决的方法就在上面那张图上，关键在于**反馈**，即明确自己的目标，提醒自己我是要“变得强壮”，不是来练练给自己心理安慰，8-12RM的意思是力竭不是觉得有点累就可以，不要怕丢脸而去挑战自己还承受不了的重量，我们做的一切都应为“变得强壮”服务。
 
-当然了，中途更改目标没什么问题，但是这不在这个框架的讨论范围内。在这篇文章里这不是什么问题，因为我想极少有人会更改“幸福”这个目标吧。
+当然了，有些人做到一半发现这并不是自己想要的，中途更改目标是常有的，但是这不在这个框架的讨论范围内。在这篇文章里这不是什么问题，因为我想极少有人会更改“幸福”这个目标吧。
 
-这是一个大家可能都知道的框架，我把它写出来的原因有三：
+以上就是这个框架的大致内容，这是一个大家可能都知道的框架，我把它写出来的原因有三：
 
 - 这个框架适用于提升幸福感
-- 人们虽然知道，但常常忘记，需要提醒
+- 我希望给后面的内容提供一个**容器**，一个互相联结的方式，帮助读者更好地理解本文
 - 我坚信这是一个应该贯穿在生活中的方方面面中，成为像我们呼吸一样的存在的习惯，当我们想做某件事，这个流程应当自然而然地浮现出来
 
-我会在后面反复地提到这个框架的应用。这篇文章提到的大部分理论都是我们所知道的，请不要抱着寻找惊奇的心态来阅读，导言里已经提到了，我们并非不清楚道理，我们只是缺乏逻辑上的**连接**与**整合**。
+我会在后面反复地提到这个框架的应用。这个框架最重要的意义在于一种全面性，无论是只关注干瘪的道理和毫无根据的方法都是不够的，我们需要知道**为什么**，也要知道**怎么做**。
 
-> common sense is not all that common
+这篇文章提到的大部分理论都是我们所知道的，请不要抱着寻找惊奇的心态来阅读，导言里已经提到了，我们并非不清楚道理，我们只是缺乏逻辑上的**连接**与**整合**。
+
+> common sense is not all that common（常识并不普通）
 
 共勉
 
 ## 二、为什么要幸福
 
-我们一生在寻求什么？金钱？权力？名声？爱情？
+首先，我们需要达成一个共识，即我们一生中所做的一切都是为了同一个**终极目的**——幸福。
 
-这些很好，但不是目的，它们只是手段，这些手段指向一个终极的目的——幸福。不仅如此，这些也不是必须的手段。
+这种幸福并非指**结局式幸福**，王子与公主在一起了，他拯救了世界，他成为千万富翁。这里的幸福指的是一种稳定的幸福，即**幸福水平**。金钱、地位和权力，这些东西很好，但不是我们的**目标**，它们只是一种达成幸福的**手段**。这里有两张图解释了**结局式幸福**与**幸福水平**的区别。
 
-  
+![enter description here][4]
+![enter description here][5]
 
+**结局式幸福**强调只有成功才能幸福，这也是成功学的主张。而**幸福水平**即《幸福课》认为成功与幸福是并行的，幸福相比于成功需要付出同等甚至更多的努力。
+
+我们听多了富人也常常不幸福的故事，而这两年微博上由于反转幽默却引领着金钱一定会让人快乐的思潮。这两种想法都是错误的，因为事实上经济水平与我们的幸福水平相关度极低，这一点在讲**完美主义**的时候会详细说明。
+ 
+事实上，一味寻求**结局式幸福**反而可能会降低我们的幸福水平，因为“在最后幸福”的心态常常会转化为“现在的苦是为了将来的幸福”的想法。
+
+**幸福应当是一种长久的状态，我们将来要幸福，并不妨碍现在的幸福。**
+
+那么如何拥有这种状态？
+
+积极心理学家认为，与幸福水平密切相关的是**心理弹性**，这是一种对抗困境的能力。幸福就意味着我们不会伤心难过吗？并不是，而是意味着我们在遭遇困境时能更好更快地恢复。
+
+心理弹性由以下因素组成
+
+- 目标
+- 意义感
+- 自信
+- 乐观主义
+- 榜样
+- 不单干 -> 寻求帮助的能力
+- 承认弱点，承认需要
+- 专注长处
+
+**心理弹性**在80年代在西方流行起来，并起到了极大的作用，后面的章节中会根据这些因素提到如何细化提高我们的心理弹性。
+
+我相信许多人都在潜意识里拒绝幸福，人们推崇“吃得苦中苦，方为人上人”这种理论，事实上更加幸福的我们，将拥有更多精力去实现自我，去爱人与寻求真爱甚至是取得世俗意义上的成功。
+
+我再重申一遍这句话，**我们因幸福而成功，不因成功而幸福**。
+
+## 三、基本概念与误区
+
+### 问题创造现实
+
+做一个小测验，给你20秒，观察下面的图，请数出图中有多少个人
+
+![enter description here][2]
+
+数完了？往下拖动
+
+- 。
+- 。
+- 。
+- 。
+- 。
+- 。
+- 。
+- 。
+- 。
+- 。
+- 。
+- 。
+
+好的，数完了吗，是不是很简单？
+
+那么不要往上拉，请问左起第三个人穿什么颜色的衣服？
+
+回答上来了？很好，请问右起第五个人有胡子吗？
+
+不必为答不上来而羞愧，不管是只回答上来一题或者没有，都是很正常的，人类每天接收大量的信息，不可能对每一条信息都加以分析、加工、存储，**遗忘**与**忽略**是我们的一种习惯，我这里并非要否定这种习惯，事实上当你看完这篇文章或者学完幸福课也不可能获得能回答这种问题的能力，因为当我问出那个问题的时候，我们专注于数人数，其他信息在我们眼里是不存在的。
+
+我想说的是，如果把这两个问题放在前面呢？如果我一开始就提出这两个问题，答案是不是显而易见，是不是跟数人数一样简单？
+
+这便是**正确提问**的重要性，我们问的问题决定了我们的关注点，决定了我们能得到什么信息。换句话说，**问题创造了现实**。
+
+根据Tol老师提供的数据，在研究文献的检索中，**忧郁**与**幸福**这两个关键字的结果比例为21:1，严谨的学术界与世俗界总是对应的，生活中当我们遭遇困境，我们会问，哪里不对了？what's wrong？但是我们极少问，哪里好？what's good？
+
+这并非说我们不应该关注那些不好的，解决问题仍然很重要。但是同时，我们也应该关注那些好的，因为如果我们不关注，它们便**不存在**，而这十分致命，下面有个简单的图可以说明这点
+
+![enter description here][3]
+
+解决问题，消除抑郁，可以有效帮我们从抑郁的状态中摆脱出来，但是它的作用效果只在中间的临界线为止，无法帮我们达到幸福的状态，要达到那种状态，更需要第二种作用力 —— **建立美好**。
+
+那么什么是所谓的关注好的？接着上面的例子，关键在于**提出正确的问题**。如果我们的问题是如何不再忧郁，那么我们只能解决忧郁，并且很多时候只是暂时性的。如果我们的问题是我哪里错了，那我们就看不到我们好的地方。如果我们只问怎么摆脱这样那样的痛苦，那我们永远无法理解苦难的价值。
+
+**问题创造现实**，我们问出怎样的问题，就创造了怎样的世界。
+
+### 越长大越不幸福？
+
+人们在年幼时更易觉得幸福。我曾关注的一名重度抑郁症患者写道：“见过婴儿心花怒放之笑，便觉成长格外凄凉。”
+
+为什么？在长大的过程中我们丢失了什么？
+
+有人问米开朗基罗，你是如何创造出《大卫》这般杰作的？米开朗基罗答道，我没有创造它，我到石料厂，在一块石头上看到了《大卫》，而我做的只是把多余的石头去掉而已。
+
+> 把多余的石头去掉
+
+这解释了这个问题，随着年龄的增长，我们并非丢失了什么，而是增加了一些不该存在于我们思想里的**限制**，那个可以更好的你已经存在于你的身体中，你需要做的，就是去掉这些限制，去掉多余的石头，让那个更好的你重现。
+
+> 为学日益，为道日损 —— 《道德经》
+
+面对这一点，我们需要提出两个问题
+
+- 如何去掉这些限制？
+- 如何让更好的我们苏醒？
+
+两个问题缺一不可，上面已经提到正确提问的重要性。我们不能只提第一个问题，即**解决**，我们还要提第二个问题，即**建立**。
+
+### 健康模型与疾病模型
+
+与传统的解决心理病痛的方式相比，积极心理学提出的是一种类似于预防医学的方式。这便是传统的疾病模型与积极心理学的健康模型，如图为两种模型
+
+![enter description here][6]
+![enter description here][7]
+
+与传统**治病**的理念不同，积极心理学倡导**增强对抗消极的能力**，类似于生理上我们光是遇到病就去治疗并不能让我们变得健康，只有增加体育锻炼，作息与三餐规律才会让我们真正健康，这种健康体现在我们更少得病与在生病时更快恢复。
+
+> 人不会只因为消除了忧愁而快乐
 
   [1]: /images/1.png
+  [2]: /images/2.jpg
+  [3]: /images/3.png
+  [4]: /images/4.png
+  [5]: /images/5.png
+  [6]: /images/6.png
+  [7]: /images/7.png
