FEATRUE 增加第三章45小节

--- a/source/_posts/幸福简易教学指南.md
+++ b/source/_posts/幸福简易教学指南.md
@@ -95,14 +95,27 @@ tags:
 
 - 目标
 - 意义感
-- 自信
 - 乐观主义
 - 榜样
 - 不单干 -> 寻求帮助的能力
 - 承认弱点，承认需要
 - 专注长处
 
-**心理弹性**在80年代在西方流行起来，并起到了极大的作用，后面的章节中会根据这些因素提到如何细化提高我们的心理弹性。
+目标。五年十年后我们想成为什么样？我们要做到什么？这给了我们动力。
+
+意义感。帮助他人与帮助社会，讲产生自助与他助的上升循环。
+
+榜样。可以是任何人，你告诉自己，你想像他那样，他会给你力量与方向。
+
+不单干。我们不要告诉自己，我们强大到不需要别人的帮助，我们应该说，我们强大到可以寻求帮助。当然我们需要找到合适的人，能给予我们正确回复的人。
+
+乐观主义。提供了一种自由转换看事情角度的能力，一般来说，我们认为这便是成熟的定义。
+
+承认弱点，承认需要。给自己为人的机会，我们不能对抗自己的人性，我们需要认识它，接受它。
+
+专注长处。并非忽略长处，而是多问自己，我到底最擅长什么，我能做什么？
+
+**心理弹性**的这些因素在80年代在西方流行起来，并起到了极大的作用，问一下自己，我们具有这些东西吗？后面的章节中会根据这些因素提到如何细化提高我们的心理弹性。
 
 我相信许多人都在潜意识里拒绝幸福，人们推崇“吃得苦中苦，方为人上人”这种理论，事实上更加幸福的我们，将拥有更多精力去实现自我，去爱人与寻求真爱甚至是取得世俗意义上的成功。
 
@@ -155,6 +168,12 @@ tags:
 
 **问题创造现实**，我们问出怎样的问题，就创造了怎样的世界。
 
+请问自己以下这些问题
+
+- 什么是你真正想做的？
+- 你的长处是什么？
+- 我要感激什么？
+
 ### 越长大越不幸福？
 
 人们在年幼时更易觉得幸福。我曾关注的一名重度抑郁症患者写道：“见过婴儿心花怒放之笑，便觉成长格外凄凉。”
@@ -176,6 +195,8 @@ tags:
 
 两个问题缺一不可，上面已经提到正确提问的重要性。我们不能只提第一个问题，即**解决**，我们还要提第二个问题，即**建立**。
 
+梭罗说，人们在沉默地压抑中。弗洛伊德说，人们在舒适地麻木中。也许你受过伤，你选择了关闭心上的门。你为了躲避痛苦也同时不敢寻求快乐，但这是你想要的吗。你想逃避痛苦吗？你想逃避快乐吗？你愿意一生活在这种状态中吗？或者是你愿意去追逐快乐，去面对痛苦，去让你的人生更加精彩。
+
 ### 健康模型与疾病模型
 
 与传统的解决心理病痛的方式相比，积极心理学提出的是一种类似于预防医学的方式。这便是传统的疾病模型与积极心理学的健康模型，如图为两种模型
@@ -187,6 +208,51 @@ tags:
 
 > 人不会只因为消除了忧愁而快乐
 
+### 幸福是一种随机现象吗
+
+我们需要知道幸福感与基因也有极大的关系。
+
+上个世纪心理学家们找到了一些同卵双胞胎，他们在出生时被分开，在不同的生活环境下成长。结果长大后他们的个性竟十分相似，幸福水平也十分相似，甚至有的娶了名字相同的妻子。
+
+从这个现象中，心理学家在80年代发布了一篇十分著名的论文 —— **幸福是一种随机现象**。
+
+该论文中最后一句话下了这么一个结论：
+
+> 也许想要变得更幸福跟想要变高一样徒劳，这一切早已在我们出生时就注定。
+
+我想许多人常常有一种命运无可抵抗的感觉，那么这个结论是不是证明了我们的努力是徒劳的？是不是无论我们怎么做，我们早晚会走向同一个结局？我们的人生是不是永远无法改变？
+
+不。
+
+当然不。
+
+在那些对双胞胎的研究中，出现了例外，是的，在这里我们必须承认基因的重要性。但是改变是可能的，否则例外何来？改变是很难的，但是这是有可能的。如果我们承认这是所谓的“**命运**”，而承认它并放弃努力，那么很快这会成为一种**自我预言**，我们会在潜意识里告诉自己这是徒劳的，引诱着我们走向不幸福。我们将在后面提到自我预言的重要性以及如何改变它。
+
+那些生来更容易焦虑和忧郁的人们，不必觉得不公平，干翻命运便是。干翻它，你可能取得比那些有幸福天赋的人取得更大的成就。从另一个角度来说，我们除了幸福还有什么其它选择呢？
+
+### no one is coming
+
+这段话在上课的时候对我触动非常大，虽然它属于自尊的内容，但我把它作为一个非常重要的基础来看。这里直接上课程截图
+
+![enter description here][8]
+
+![enter description here][9]
+
+![enter description here][10]
+
+![enter description here][11]
+
+![enter description here][12]
+
+![enter description here][13]
+
+![enter description here][14]
+
+![enter description here][15]
+
+停止抱怨他人，承担起生活的责任来，承担让自己变好的责任，爱自己，让自己变得幸福，你只要也只能靠自己的努力。
+
+
   [1]: /images/1.png
   [2]: /images/2.jpg
   [3]: /images/3.png
@@ -194,3 +260,11 @@ tags:
   [5]: /images/5.png
   [6]: /images/6.png
   [7]: /images/7.png
+  [8]: /images/8.png
+  [9]: /images/9.png
+  [10]: /images/10.png
+  [11]: /images/11.png
+  [12]: /images/12.png
+  [13]: /images/13.png
+  [14]: /images/14.png
+  [15]: /images/15.png
