--- a/source/_posts/幸福简易教学指南（一）.md
+++ b/source/_posts/幸福简易教学指南（一）.md
@@ -1,22 +1,22 @@
 ---
-title: 幸福简易教学指南
+title: 幸福简易教学指南（一）
 date: 2016-12-19 10:46:28
 tags:
 ---
 
 ## 导言
 
-我们都听过那句话，“明白很多道理，却还是过不好这一生”。我看到这句话的第一想法是，对啊，但是为什么？为什么道理都讲得很清楚，而我们也懂，但就是改变不了什么？在看完《哈佛幸福课》（又名《积极心理学》）后，我终于明确了这个问题的解答。之所以道理会无用，并不一定说明它是错的，而是它可能只是**孤零零的道理**。以前有个学长说，念头未转化为行为时，就只是一个念头而已就好比拿到了个轮子就想骑着上路，当然会摔倒。本文结合《哈佛幸福课》，希望提出一套从**理论**、**实例**和**方法论**上都兼顾的**完整体系**，从根本上提供提高我们的幸福水平的可行条件，帮助我们实现自我、找到真爱以及变得更幸福。（PS：配合《哈佛幸福课》食用风味更佳）
+我们都听过那句话，“明白很多道理，却还是过不好这一生”。我看到这句话的第一想法是，对啊，但是为什么？为什么道理都讲得很清楚，而我们也懂，但就是改变不了什么？在上完《哈佛幸福课》课程（又名《积极心理学》）后，我渐渐明确了这个问题的解答。之所以道理会无用，并不一定说明它是错的，而是它可能只是**孤零零的道理**。以前有个学长说，念头未转化为行为时，就只是一个念头而已。就好比拿到了个轮子就想骑着上路，当然会摔倒。本文希望提出一套从**理论**、**实例**和**方法论**上都兼顾的**完整体系**，从根本上提供提高我们的幸福水平的可行条件，帮助我们实现自我、找到真爱以及变得更幸福。（PS：配合《哈佛幸福课》食用风味更佳）
 
 ## 个人经历
 
-很长一段时间以来，笔者都深陷在一种难以言明的低落情绪中，即使在没有烦恼的日子里，情绪都极为低落，那种感觉就像陷入了泥潭中，怎么爬也爬不上来。与这种情绪抗争的过程中，我渐渐失去了热情，大概就是觉得无能为力，觉得怎么努力都是不开心。在这个过程中伤害了许多人，如果接着上面的比喻的话，便是拼命抓着其他人的身体想从泥潭里爬出来，却把他们也拉了进来。结果便是在这一年，我与一些以为会是一生伙伴的好朋友渐行渐远，我也彻底失去了一个可能是我的the one的人。在这段至今为止最糟糕的日子里，看《幸福课》，做笔记，践行它的方法，是我最大的能量来源。我可以清晰地感受到我自身的改变，面对我的情绪我不再觉得无能为力，我变得更为乐观，没有在这种处境下自暴自弃，可以说它已经改变了我的人生。我并没有说在上完课之后我就神功大成天下无敌了，到现在我只是入了个门，开始上路了而已。Tol（幸福课老师）说，让自己更幸福这是毕生的修炼。希望这篇文章可以让你也开始走上更幸福的道路。
+很长一段时间以来，笔者都深陷在一种难以言明的低落情绪中，即使在没有烦恼的日子里，情绪都极为低落，那种感觉就像陷入了泥潭中，怎么爬也爬不上来。与这种情绪抗争的过程中，我渐渐失去了热情，大概就是觉得无能为力，觉得怎么努力都是不开心。在这个过程中伤害了许多人，如果接着上面的比喻的话，便是拼命抓着其他人的身体想从泥潭里爬出来，却把他们也拉了进来。结果便是在这一年，我与一些以为会是一生伙伴的好朋友渐行渐远，我也彻底失去了一个可能是我的the one的人。在这段至今为止最糟糕的日子里，看《幸福课》，做笔记，践行它的方法，是我最大的能量来源。我可以清晰地感受到我自身的改变，面对我的情绪我不再觉得无能为力，我变得更为乐观，可以平静面对困境，可以说它已经改变了我的人生。我并没有说在上完课之后我就神功大成天下无敌了，到现在我只是入了个门，开始上路了而已。Tol（幸福课老师）说，让自己更幸福这是毕生的修炼。希望这篇文章可以让你也开始走上更幸福的道路。
 
 ## 目录
 
-- 一个简单的人生框架
-- 为什么要幸福
-- 基本概念与误区
+- **一个简单的人生框架**
+- **为什么要幸福**
+- **基本概念与误区**
 - 环境与乐观主义
 - 关于改变
 - 幸福方法论
@@ -52,7 +52,7 @@ tags:
 
 在动的过程中，你有了疑惑，你去寻找、完善你的理论，通过理论纠正你的方法，改正你的行为。你发现这样的搭配不适合你，你发现这个动作对你来说难度还太大，你发现进步不大原因在于饮食没跟上，你选择更加适合你的饮食习惯。
 
-我想到这里前两个问题的解决方法已经有了眉目了，第三个问题较为少见，因为对于连动都没动的人来说没机会遇到这个问题。解决的方法就在上面那张图上，关键在于**反馈**，即明确自己的目标，提醒自己我是要“变得强壮”，不是来练练给自己心理安慰，8-12RM的意思是力竭不是觉得有点累就可以，不要怕丢脸而去挑战自己还承受不了的重量，我们做的一切都应为“变得强壮”服务。
+我想到这里前两个问题的解决方法已经有了眉目了，而第三个问题要在“动起来”之后才会遇到，却是最致命的。解决的方法就在上面那张图上，关键在于**反馈**，即明确自己的目标，提醒自己我是要“变得强壮”，不是来练练给自己心理安慰，8-12RM的意思是力竭不是觉得有点累就可以，不要怕丢脸而去挑战自己还承受不了的重量，我们做的一切都应为“变得强壮”服务。
 
 当然了，有些人做到一半发现这并不是自己想要的，中途更改目标是常有的，但是这不在这个框架的讨论范围内。在这篇文章里这不是什么问题，因为我想极少有人会更改“幸福”这个目标吧。
 
@@ -103,9 +103,9 @@ tags:
 
 目标。五年十年后我们想成为什么样？我们要做到什么？这给了我们动力。
 
-意义感。帮助他人与帮助社会，讲产生自助与他助的上升循环。
+意义感。帮助他人与帮助社会，将产生自助与他助的上升循环。
 
-榜样。可以是任何人，你告诉自己，你想像他那样，他会给你力量与方向。
+榜样。可以是任何人，你告诉自己，你想像他那样，你想变成那样，他会给你力量与方向。
 
 不单干。我们不要告诉自己，我们强大到不需要别人的帮助，我们应该说，我们强大到可以寻求帮助。当然我们需要找到合适的人，能给予我们正确回复的人。
 
@@ -113,7 +113,7 @@ tags:
 
 承认弱点，承认需要。给自己为人的机会，我们不能对抗自己的人性，我们需要认识它，接受它。
 
-专注长处。并非忽略长处，而是多问自己，我到底最擅长什么，我能做什么？
+专注长处。这并不意味着忽略短处，而是多问自己，我到底最擅长什么，我能做什么？发掘它，加强它。
 
 **心理弹性**的这些因素在80年代在西方流行起来，并起到了极大的作用，问一下自己，我们具有这些东西吗？后面的章节中会根据这些因素提到如何细化提高我们的心理弹性。
 
@@ -166,17 +166,11 @@ tags:
 
 那么什么是所谓的关注好的？接着上面的例子，关键在于**提出正确的问题**。如果我们的问题是如何不再忧郁，那么我们只能解决忧郁，并且很多时候只是暂时性的。如果我们的问题是我哪里错了，那我们就看不到我们好的地方。如果我们只问怎么摆脱这样那样的痛苦，那我们永远无法理解苦难的价值。
 
-**问题创造现实**，我们问出怎样的问题，就创造了怎样的世界。
-
-请问自己以下这些问题
-
-- 什么是你真正想做的？
-- 你的长处是什么？
-- 我要感激什么？
+**问题创造现实**，我们问出怎样的问题，就创造了怎样的世界。我们将在后面的章节中提出一些我们不常问，或是我们选择不去问的问题，由这些问题来创造我们**幸福的基础**。
 
 ### 越长大越不幸福？
 
-人们在年幼时更易觉得幸福。我曾关注的一名重度抑郁症患者写道：“见过婴儿心花怒放之笑，便觉成长格外凄凉。”
+我们知道人们在年幼时更易觉得幸福。我曾关注的一名重度抑郁症患者写道：“见过婴儿心花怒放之笑，便觉成长格外凄凉。”
 
 为什么？在长大的过程中我们丢失了什么？
 
@@ -184,7 +178,7 @@ tags:
 
 > 把多余的石头去掉
 
-这解释了这个问题，随着年龄的增长，我们并非丢失了什么，而是增加了一些不该存在于我们思想里的**限制**，那个可以更好的你已经存在于你的身体中，你需要做的，就是去掉这些限制，去掉多余的石头，让那个更好的你重现。
+这是对这个问题非常形象的解答，随着年龄的增长，我们并非丢失了什么，而是增加了一些不该存在于我们思想里的**限制**，那个可以更好的你已经存在于你的身体中，你需要做的，就是去掉这些限制，去掉多余的石头，让那个更好的你重现。
 
 > 为学日益，为道日损 —— 《道德经》
 
@@ -195,7 +189,9 @@ tags:
 
 两个问题缺一不可，上面已经提到正确提问的重要性。我们不能只提第一个问题，即**解决**，我们还要提第二个问题，即**建立**。
 
-梭罗说，人们在沉默地压抑中。弗洛伊德说，人们在舒适地麻木中。也许你受过伤，你选择了关闭心上的门。你为了躲避痛苦也同时不敢寻求快乐，但这是你想要的吗。你想逃避痛苦吗？你想逃避快乐吗？你愿意一生活在这种状态中吗？或者是你愿意去追逐快乐，去面对痛苦，去让你的人生更加精彩。
+梭罗说，人们在沉默地压抑中。弗洛伊德说，人们在舒适地麻木中。也许你受过伤，你选择了关闭心上的门。你为了躲避痛苦也同时不敢寻求快乐，但这是你想要的吗。你想逃避痛苦吗？你想逃避快乐吗？你愿意一直生活在这种状态中吗？或者是你愿意去追逐快乐，去面对痛苦，去让你的人生更加精彩。
+
+**请停止这种舒适的麻木。**
 
 ### 健康模型与疾病模型
 
@@ -228,7 +224,9 @@ tags:
 
 在那些对双胞胎的研究中，出现了例外，是的，在这里我们必须承认基因的重要性。但是改变是可能的，否则例外何来？改变是很难的，但是这是有可能的。如果我们承认这是所谓的“**命运**”，而承认它并放弃努力，那么很快这会成为一种**自我预言**，我们会在潜意识里告诉自己这是徒劳的，引诱着我们走向不幸福。我们将在后面提到自我预言的重要性以及如何改变它。
 
-那些生来更容易焦虑和忧郁的人们，不必觉得不公平，干翻命运便是。干翻它，你可能取得比那些有幸福天赋的人取得更大的成就。从另一个角度来说，我们除了幸福还有什么其它选择呢？
+基因带给我们的焦虑和忧郁是一种不公平吗？诚然，这让我们的人生艰辛了不少。但是一旦我们克服了它，我们将比没有这种经历的人拥有更细腻的思维和更柔韧的神经。
+
+我们除了幸福还有什么选择？
 
 ### no one is coming
 
